--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div>
+        <h1>Daniela Condori Bejarano</h1>
     <h1>Carpinchos</h1>
          <h2>Introduccion</h2>
          <p>
@@ -19,7 +20,7 @@
         </p>
             <h3><q>subsubtitulo1</q></h3>
             <h3>subsubtitulo2</h3>
-        <h2>subtitulo2</h2>
+           <h2>subtitulo2</h2>
             <h3>subsubtitulo3</h3>
             <h3>subsubtitulo4</h3>
 
@@ -43,12 +44,19 @@
         <p>los cocodrilos <em>no comen </em> capibaras</p>
         <p>los cocodrilos no comen <em>capibaras</em></p>
         <p><q>Los capibaras son como un abrazo en forma de animal, suaves, tranquilos y llenos de paz</q></p>
+        
     <div>   
     Calle M. Marquez esquina <br> Parque Jorge Trigo Andia
     </div>
+
 <div>
     
+    <figure>
+        <blockquote cite="https://zooguadalajara.com.mx/animales/detalle/83">
+            <p>A esta especie, algunas veces se le mata porque lo consideran una peste para la agricultura, o es cazado intensamente por su carne y cuero. Su piel grasosa y gruesa, provee de una sustancia grasosa usada en el comercio farmacéutico y sus incisivos los usan como adorno los indígenas.</p>
+        </blockquote>
+        <figcaption>Pi</figcaption>
+    </figure>
 </div>
-<div></div>
 </body>
 </html>
