--- a/index.html
+++ b/index.html
@@ -58,5 +58,59 @@
         <figcaption>Pi</figcaption>
     </figure>
 </div>
+<div>
+    Un libro: <cite>La odisea </cite>
+    <dfn>Capibara</dfn> roedor mas grande del mundo 
+    <abbr title="Cascading ">ccc</abbr> 
+    <small>puedes comer galletas en clase </small>
+    <ins cite="https://www.directoalpaladar.com/postres/cinco-galletas-buscadas-internet-sus-recetas-faciles-deliciosas"datetime="3/13/2025"><p>"las galletas son ricas"</p></ins>
+
+    <del>"hay galletas con sabor raro"</del>
+    <s>antes 10 dolares</s>
+    <p>5</p>
+    <p>el metodo <code>get</code> nos sirve para obtener datos</p>
+    <pre>
+        <code>Javascript
+            class galleta{
+                private:
+                     galleta();
+                public:
+                    void comer(galleta galletaElegida);
+                    void hacer (ingredientes);
+            }
+        </code>
+    </pre>
+    <samp>contrasenia incorrecta
+        intentelo de nuevo
+    </samp>
+    <p>
+        para que copiar untexto presione
+        <kbd>
+            <kbd>ctrl</kbd>
+            +
+            <kbd>F5</kbd>
+        </kbd>
+    </p>
+    <pre>
+        pizarra
+        celular
+          /\  /\
+         ( 0  0 )
+           --- 
+        \(     )
+        ───▄▀▀▀▄▄▄▄▄▄▄▀▀▀▄───
+        ───█▒▒░░░░░░░░░▒▒█───
+        ────█░░█░░░░░█░░█────
+        ─▄▄──█░░░▀█▀░░░█──▄▄─
+        █░░█─▀▄░░░░░░░▄▀─█░░█
+        
+    </pre>
+    <address>
+        <a href="camila.carvala@ucb.edu.bo">Contacto Cami</a>
+    </address>
+    <p>
+        elemento generico : &lt;divgt&gt;     
+    </p>
+</div>
 </body>
 </html>
